@@ -23,6 +23,10 @@
 
 #if USE_PYTHON
 #include "gnubgmodule.h"
+#ifdef WIN32
+/* needed for mingw inclusion of Python.h */
+#include <stdint.h>
+#endif
 #include <Python.h>
 #endif
 #include "backgammon.h"
