@@ -1,6 +1,10 @@
+Mon Mar 31 12:58:06 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* dbprovider.c, gnubgmodule.c: include stdint.h on win32
+
 Fri Mar 28 15:25:34 CET 2008 Achim Mueller <ace@gnubg.org>
 
-    * changed configure.in: new release number 0.9.0 
+	* changed configure.in: new release number 0.9.0 
 
 Fri Mar 28 00:40:32 CET 2008 Christian Anthon <anthon@kiku.dk>
 
